--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_2.10</artifactId>
+      <artifactId>scalatest_2.11</artifactId>
       <version>2.2.4</version>
       <scope>test</scope>
     </dependency>
@@ -45,6 +45,11 @@
     <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-remote_2.11</artifactId>
+      <version>2.3.14</version>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-testkit_2.11</artifactId>
       <version>2.3.14</version>
     </dependency>
     <dependency>
